--- a/ProjectStudy/webStudy/4/style.css
+++ b/ProjectStudy/webStudy/4/style.css
@@ -1,4 +1,22 @@
 h1 {
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 900;
+    color: rgb(48, 48, 48);
+    line-height: 30px;
+}
+
+th {
+    text-align:center;
+    font-size: 16px;
+    font-weight: 600;
+    color:#3333b0;
+    /* 3 * 16 + 3 = 51, 11 * 16 = 176 */
+
+}
+td {
+    color: violet;
+}
+img {
+    width: 100px;
+    height: 200px;
 }
